Board overflow scroll fix

--- a/src/boards/BoardStyles.module.css
+++ b/src/boards/BoardStyles.module.css
@@ -1,6 +1,5 @@
 .Board {
   padding: 1em;
-  overflow: hidden;
   display: flex;
   flex-direction: column;
   gap: 1em;
